[gd_scene load_steps=9 format=3 uid="uid://cgnb0yeedrgic"]

[ext_resource type="PackedScene" uid="uid://cjttwapnf87ix" path="res://assets/models/Spider.glb" id="1_1uyxt"]
[ext_resource type="Script" uid="uid://r31d4uxatmpp" path="res://scenes/Bugs/BossSpider/BossSpider.gd" id="2_402v5"]
[ext_resource type="AudioStream" uid="uid://bw4rruf5dkba" path="res://assets/sounds/splat.wav" id="3_7lryp"]
[ext_resource type="AudioStream" uid="uid://cvvekbvqp1efp" path="res://assets/sounds/spider_walk.wav" id="4_txosg"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1uyxt"]
size = Vector3(3.30273, 2.3277, 4.17505)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7lryp"]
albedo_color = Color(0.485565, 0.789398, 0.263196, 1)

[sub_resource type="SphereMesh" id="SphereMesh_txosg"]
radius = 0.1
height = 0.2
radial_segments = 16
rings = 8

[sub_resource type="Curve" id="Curve_qgo83"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Spider" instance=ExtResource("1_1uyxt")]
script = ExtResource("2_402v5")

[node name="Skeleton3D" parent="Armature" index="0"]
bones/1/position = Vector3(0.289725, 0.00203593, 0.391904)
bones/1/rotation = Quaternion(0.975297, 0, -0.220897, 3.49246e-09)
bones/2/position = Vector3(0.654924, 0.00203593, 0.0888006)
bones/2/rotation = Quaternion(-0.701889, 1.86265e-09, 0.712287, -1.86265e-09)
bones/3/position = Vector3(0.516997, 0.00203593, -0.262792)
bones/3/rotation = Quaternion(-0.618405, 1.86264e-09, 0.78586, 0)
bones/4/position = Vector3(0.492613, 0.00203593, -0.446825)
bones/5/position = Vector3(-0.289725, 0.00203593, 0.590341)
bones/5/rotation = Quaternion(0.975297, 0, 0.220897, 3.49246e-09)
bones/6/position = Vector3(-0.55938, 0.00203593, -0.0287917)
bones/6/rotation = Quaternion(0.701889, 1.86265e-09, 0.712287, 1.86265e-09)
bones/7/position = Vector3(-0.641939, 0.00203593, -0.101103)
bones/7/rotation = Quaternion(0.618405, 1.86264e-09, 0.78586, 0)
bones/8/position = Vector3(-0.365221, 0.00203593, -0.557067)
bones/9/position = Vector3(0, 0.14, 0)
bones/9/rotation = Quaternion(0.707107, -1.37679e-07, -1.37679e-07, 0.707107)
bones/10/rotation = Quaternion(-0.152644, 0.0595433, -0.228784, 0.95959)
bones/11/rotation = Quaternion(0.757882, 0.00412373, -0.112257, 0.642648)
bones/12/rotation = Quaternion(-0.0471181, 0.0398323, -0.644364, 0.762226)
bones/13/rotation = Quaternion(0.392574, -0.0252504, -0.0872432, 0.915225)
bones/14/rotation = Quaternion(-0.0357179, 0.113649, -0.819762, 0.560177)
bones/15/rotation = Quaternion(0.563004, 0.0144731, -0.142139, 0.814011)
bones/16/rotation = Quaternion(0.0224688, -0.0520702, 0.916689, -0.395557)
bones/17/rotation = Quaternion(0.382981, -0.0141097, -0.0490524, 0.922345)
bones/18/rotation = Quaternion(-0.0470405, -0.00879539, 0.183583, 0.981839)
bones/19/rotation = Quaternion(0.394072, 0.0115419, 0.0360793, 0.918299)
bones/20/rotation = Quaternion(-0.0880852, -0.11744, 0.679534, 0.718806)
bones/21/rotation = Quaternion(0.60985, 0.00538874, 0.18365, 0.770926)
bones/22/rotation = Quaternion(-0.0399302, -0.0452872, 0.748707, 0.660146)
bones/23/rotation = Quaternion(0.406819, 0.0164519, 0.0534033, 0.911798)
bones/24/rotation = Quaternion(0.0192641, -0.029962, 0.95899, 0.281193)
bones/25/rotation = Quaternion(0.313085, -0.00841872, 0.0827485, 0.946076)
bones/26/position = Vector3(0, 0.14, 0)
bones/26/rotation = Quaternion(-0.707107, 0, 0, 0.707107)

[node name="Mesh" parent="Armature/Skeleton3D" index="0"]
transform = Transform3D(8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0)

[node name="AnimationPlayer" parent="." index="1"]
root_motion_track = NodePath("Armature/Skeleton3D:Root")
root_motion_local = false
autoplay = "Idle"
speed_scale = 2.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.07651, -1.19934)
shape = SubResource("BoxShape3D_1uyxt")

[node name="SplatSound" type="AudioStreamPlayer3D" parent="." index="3"]
stream = ExtResource("3_7lryp")
volume_db = 20.0
pitch_scale = 0.5

[node name="WalkSound" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("4_txosg")
volume_db = 50.0
pitch_scale = 0.5
bus = &"Sound"

[node name="SplatParticles" type="CPUParticles3D" parent="." index="5"]
material_override = SubResource("StandardMaterial3D_7lryp")
emitting = false
amount = 256
lifetime = 0.5
one_shot = true
explosiveness = 1.0
mesh = SubResource("SphereMesh_txosg")
direction = Vector3(0, 1, 0)
spread = 98.26
initial_velocity_min = 6.0
initial_velocity_max = 24.0
damping_min = 0.4
damping_max = 0.5
scale_amount_min = 8.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_qgo83")
